# project-manager-plus

./: AnalysisBridge.cpp  AnalysisBridge.h  CMakeLists.txt  CountdownTimer.cpp  CountdownTimer.h  Persistence.cpp  Persistence.h  Project.cpp  Project.h  README.md  Task.cpp  Task.h  main.cpp  smart_analysis.py  test.cpp
